Add logo to QRCode

--- a/SendLink/SendLink.csproj
+++ b/SendLink/SendLink.csproj
@@ -169,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="sendlink_icon.ico" />
+    <None Include="sendlink_roundicon.png" />
     <Content Include="x64\SQLite.Interop.dll" />
     <Content Include="x86\SQLite.Interop.dll" />
   </ItemGroup>
